--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack -- watch",
+    "webpack": "webpack --watch",
     "build": "webpack"
   },
   "repository": {
@@ -20,11 +20,14 @@
   },
   "homepage": "https://github.com/janimuhlestein/food-festival#readme",
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "webpack": "^5.10.0",
+    "webpack-bundle-analyzer": "^4.2.0",
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "image-webpack-loader": "^7.0.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
