--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "webpack-dev": "^1.1.1",
     "webpack-dev-middleware": "^4.0.2",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
